--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -244,7 +244,7 @@
       },
       "steps": [
         {
-          "exec": "npm update npm-check-updates"
+          "exec": "pnpm update npm-check-updates"
         },
         {
           "exec": "npm-check-updates --dep dev --upgrade --target=minor --reject='aws-cdk-lib,constructs'"
@@ -262,10 +262,10 @@
           "exec": "npm-check-updates --dep bundle --upgrade --target=minor --reject='aws-cdk-lib,constructs'"
         },
         {
-          "exec": "npm install"
+          "exec": "pnpm i --no-frozen-lockfile"
         },
         {
-          "exec": "npm update"
+          "exec": "pnpm update"
         },
         {
           "exec": "npx projen"
