--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27",
-    "@types/node": "^16.0.0",
+    "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
     "aws-cdk-lib": "2.66.0",
@@ -48,7 +48,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^27",
     "jest-junit": "^13",
-    "jsii": "^1.77.0",
+    "jsii": "v4.9-next",
     "jsii-diff": "^1.77.0",
     "jsii-docgen": "^7.1.18",
     "jsii-pacmak": "^1.77.0",
