--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "organization": false
   },
   "devDependencies": {
+    "@jest/globals": "^27.5.1",
     "@types/jest": "^27",
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^5",
@@ -63,6 +64,12 @@
     "aws-cdk-lib": "^2.66.0",
     "constructs": "^10.0.5"
   },
+  "dependencies": {
+    "yaml": "^2.2.1"
+  },
+  "bundledDependencies": [
+    "yaml"
+  ],
   "keywords": [
     "cdk"
   ],
